Projet GL/Projet_GL/src/test/deca/codegen/valid/created/incr1/printx.ass
	ADDSP #2
	TSTO #2
	BOV stack_overflow_error
; Code de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Start main program
; Variables declarations:
; Beginning of main instructions:
	LOAD #0x1.9df3b6p1, R1
	WFLOATX
	WSTR " "
	LOAD #0x1.0p1, R1
	WFLOATX
	WSTR " "
	LOAD #0x1.4p1, R1
	WFLOATX
	HALT
; End main program
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R0
	RTS
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
