Projet GL/Projet_GL/src/test/deca/codegen/invalid/created/wrongfloat2.ass
; start main program
; Variables declarations:
	LOAD #1, R2
	FLOAT R2, R2
	STORE R2, 1(GB)
; Beginning of main instructions:
	HALT
; end main program
